# libsvm

./: .gitignore  CMakeLists.txt  README.md
.github/: WORKFLOWS.md  copilot-instructions.md
.github/workflows/: cmake-ci.yml  tests.yml  wheel.yml
apps/: CMakeLists.txt
bindings/: CMakeLists.txt
bindings/java/: CMakeLists.txt
bindings/matlab/: CMakeLists.txt
bindings/python/: CMakeLists.txt  setup.py
bindings/python/libsvm/: svm.py
cmake/: LibSVMConfig.cmake.in  options.cmake
docs/: DEV_LOG.md  FORK.md
examples/: CMakeLists.txt
examples/svm-toy/: CMakeLists.txt  svm-toy.cpp
scripts/: ci-ubuntu.sh  ci-windows.ps1  run_tests.sh  test-java-bindings-bash.sh
src/: CMakeLists.txt  svm.cpp
test_project/: CMakeLists.txt  test.cpp
tests/: CMakeLists.txt  MEMORY_TESTING.md  README.md
tests/common/: test_utils.cpp  test_utils.h
tests/comparison/: README.md  compare_runner.sh  test_opencv_comparison.cpp  test_upstream_comparison.cpp
tests/comparison/test_cases/: basic_train_predict.cpp  cross_validation.cpp  model_save_load.cpp
tests/integration/: test_cross_validation.cpp  test_model_io.cpp  test_probability.cpp  test_train_predict.cpp
tests/memory/: test_memory_leaks.cpp  test_resource_management.cpp
tests/unit/: test_kernel.cpp  test_model.cpp  test_svm_node.cpp  test_svm_parameter.cpp  test_svm_problem.cpp
