# ============================================================================
# LibSVM Examples
# ============================================================================

# ============================================================================
# svm-toy (Qt GUI Example)
# ============================================================================

option(LIBSVM_BUILD_SVM_TOY "Build svm-toy Qt GUI example" ON)

if(LIBSVM_BUILD_SVM_TOY)
    add_subdirectory(svm-toy)
endif()
